rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__number-values-with-security-capabilities__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Hmmm
  class: NumberValue
  properties:
    Attributes:
      Attributes: {}
    Capabilities:
      SecurityCapabilities: 0
    Sandboxed:
      Bool: false
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Float64: 2.71828182846
  children: []
- referent: referent-1
  name: WhereIs
  class: NumberValue
  properties:
    Attributes:
      Attributes: {}
    Capabilities:
      SecurityCapabilities: 2882400000
    Sandboxed:
      Bool: false
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Float64: 2.71828182846
  children: []
